[gd_scene format=3 uid="uid://wlee4skbwwn7"]

[ext_resource type="Script" uid="uid://d1khe8x3ms2" path="res://Scripts/enemy_base.gd" id="1_wsqk3"]
[ext_resource type="Shader" uid="uid://bgg57fksph6g" path="res://Shaders/WhiteHitFlicker.tres" id="2_tb7ow"]
[ext_resource type="Texture2D" uid="uid://dhdpadd3jnhw4" path="res://Sprites/Creatures/HeartBomberZombie.png" id="3_tqs5k"]
[ext_resource type="Script" uid="uid://dyoj1xhhsm2ux" path="res://Scripts/States/State_Machines.gd" id="4_fmmwi"]
[ext_resource type="Script" uid="uid://b3rgfe5weqeg5" path="res://Scripts/States/new_follow.gd" id="5_cb0jj"]
[ext_resource type="Script" uid="uid://ctm68wncswdh3" path="res://Scripts/States/IdleState.gd" id="5_rpun3"]
[ext_resource type="Script" uid="uid://culeuyn6vmqdl" path="res://Scripts/States/waitState.gd" id="7_tqs5k"]
[ext_resource type="Script" uid="uid://bsoulwgas7dul" path="res://Scripts/States/RegularZombieAttack.gd" id="9_wsqk3"]
[ext_resource type="PackedScene" uid="uid://brx0laug66ioh" path="res://Scenes/HitboxBase.tscn" id="10_rvaun"]
[ext_resource type="Resource" uid="uid://bnpyxsq3upb65" path="res://Resource/Hitboxes/LungeHitbox.tres" id="11_xjvek"]
[ext_resource type="Script" uid="uid://dwiu225lyiv66" path="res://Scripts/Hitbox/HurtboxesRewrite.gd" id="12_cfq85"]
[ext_resource type="Texture2D" uid="uid://0x4rrxlynlct" path="res://Sprites/etc/Staggermark.png" id="13_vpstn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j71u1"]
size = Vector2(45, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38ttm"]
size = Vector2(39, 51)

[sub_resource type="Animation" id="Animation_305eg"]
resource_name = "Hit_Flashhh"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:material:shader_parameter/Enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_o2mi0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:material:shader_parameter/Enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r6ybs"]
_data = {
&"Hit_Flashhh": SubResource("Animation_305eg"),
&"RESET": SubResource("Animation_o2mi0")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o2mi0"]
resource_local_to_scene = true
shader = ExtResource("2_tb7ow")
shader_parameter/Enabled = false
shader_parameter/Tint = Color(1, 1, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_nhhqh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rpun3"]
radius = 224.56

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hsbdb"]
size = Vector2(38.5, 57.5)

[sub_resource type="Animation" id="Animation_yx32x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-24.77, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaggerSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4.505, 1)]
}

[sub_resource type="Animation" id="Animation_daboh"]
resource_name = "StaggerShake"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335, 0.13333334, 0.19999999, 0.26666668, 0.33333334, 0.36666673, 0.4333334, 0.50000006, 0.56666666, 0.6333334, 0.66666675, 0.73333335, 0.8000001, 0.8666668, 0.9000001, 0.9666668, 0.9999999, 1.0333335, 1.0666665, 1.1000001, 1.1333332, 1.1666667, 1.1999999, 1.2333332, 1.3, 1.3666667, 1.4333333, 1.4999999),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-0.9999981, 4), Vector2(-3.175, 4), Vector2(-0.69, 4), Vector2(-1.83, 4), Vector2(0.135, 4), Vector2(-0.9999981, 4), Vector2(-3.175, 4), Vector2(-0.69, 4), Vector2(-1.83, 4), Vector2(0.135, 4), Vector2(-3.175, 4), Vector2(-0.69, 4), Vector2(-1.83, 4), Vector2(0.135, 4), Vector2(-0.9999981, 4), Vector2(-3.175, 4), Vector2(-3.175, 4), Vector2(-0.69, 4), Vector2(-0.69, 4), Vector2(-1.83, 4), Vector2(-1.83, 4), Vector2(0.135, 4), Vector2(0.135, 4), Vector2(-0.9999981, 4), Vector2(-3.175, 4), Vector2(-0.69, 4), Vector2(-1.83, 4), Vector2(0.135, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.06666668),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.1675516]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaggerSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333333, 0.20000002, 0.26666668, 0.33333334, 0.4, 0.4666667, 0.5333333, 0.6333333, 0.7, 0.76666665, 0.8333334, 0.8666667, 0.9, 0.93333334, 0.9666667, 1, 1.0666667, 1.1, 1.1333333, 1.1666667, 1.2, 1.2666668, 1.3333334, 1.4000001, 1.4333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-4.505, 1), Vector2(2.71, 1), Vector2(-2.11, 1), Vector2(-0.235, 1), Vector2(-4.505, 1), Vector2(2.71, 1), Vector2(-2.11, 1), Vector2(-0.235, 1), Vector2(-4.505, 1), Vector2(-4.505, 1), Vector2(2.71, 1), Vector2(-2.11, 1), Vector2(-0.235, 1), Vector2(-4.505, 1), Vector2(-4.505, 1), Vector2(2.71, 1), Vector2(-4.505, 1), Vector2(-2.11, 1), Vector2(-0.235, 1), Vector2(-2.11, 1), Vector2(-4.505, 1), Vector2(-0.235, 1), Vector2(-4.505, 1), Vector2(2.71, 1), Vector2(-2.11, 1), Vector2(-0.235, 1), Vector2(2.71, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_08ppn"]
_data = {
&"RESET": SubResource("Animation_yx32x"),
&"StaggerShake": SubResource("Animation_daboh")
}

[sub_resource type="Gradient" id="Gradient_wsqk3"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rrwoe"]
gradient = SubResource("Gradient_wsqk3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tb7ow"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
initial_velocity_min = 20.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_max = 13.99
color_ramp = SubResource("GradientTexture1D_rrwoe")

[node name="EnemyNavTest" type="CharacterBody2D" unique_id=605839619 node_paths=PackedStringArray("retreatpoints") groups=["Enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_wsqk3")
retreatpoints = [null]

[node name="AttackTimer" type="Timer" parent="." unique_id=786319989]

[node name="Area2D" type="Area2D" parent="." unique_id=914810341 groups=["Enemy"]]
light_mask = 2
visibility_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=84337242 groups=["Enemy"]]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_j71u1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=138158341]
position = Vector2(1, 5)
shape = SubResource("RectangleShape2D_38ttm")

[node name="HitFlashAnimation" type="AnimationPlayer" parent="." unique_id=1015550659]
active = false
libraries/ = SubResource("AnimationLibrary_r6ybs")

[node name="EnemySprite" type="Sprite2D" parent="." unique_id=1674545077]
texture_filter = 1
material = SubResource("ShaderMaterial_o2mi0")
position = Vector2(-24.77, 4)
scale = Vector2(2.725233, 2.7065809)
texture = ExtResource("3_tqs5k")
offset = Vector2(0.84, -0.962)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=437465159]
position = Vector2(-0.16, 0)
scale = Vector2(6.1599994, 1)
sprite_frames = SubResource("SpriteFrames_nhhqh")

[node name="StateMachine" type="Node" parent="." unique_id=850552245 node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_fmmwi")
initial_state = NodePath("NewFollow")

[node name="Idle" type="Node" parent="StateMachine" unique_id=1340439754 node_paths=PackedStringArray("enemy")]
script = ExtResource("5_rpun3")
enemy = NodePath("../..")

[node name="NewFollow" type="Node" parent="StateMachine" unique_id=822364083 node_paths=PackedStringArray("enemy", "Navigation_Agent")]
script = ExtResource("5_cb0jj")
enemy = NodePath("../..")
Intentions = ["Wait", "Attack"]
Navigation_Agent = NodePath("../../NavigationAgent2D")

[node name="Wait" type="Node" parent="StateMachine" unique_id=1764209406 node_paths=PackedStringArray("enemy", "Navigation_Agent")]
script = ExtResource("7_tqs5k")
enemy = NodePath("../..")
Intentions = ["Attack", "NewFollow"]
Navigation_Agent = NodePath("../../NavigationAgent2D")

[node name="Attack" type="Node" parent="StateMachine" unique_id=9754648 node_paths=PackedStringArray("enemy", "Navigation_Agent")]
script = ExtResource("9_wsqk3")
enemy = NodePath("../..")
AttackHitbox = SubResource("CircleShape2D_rpun3")
Navigation_Agent = NodePath("../../NavigationAgent2D")

[node name="HitBoxBase" parent="." unique_id=1114169184 instance=ExtResource("10_rvaun")]
position = Vector2(0, 3)
scale = Vector2(2.762234, 3.6820366)
collision_layer = 2
collision_mask = 2
hitbox = ExtResource("11_xjvek")

[node name="RayCast2D" type="RayCast2D" parent="." unique_id=720655070]
target_position = Vector2(0, 43)

[node name="Hurtbox" type="Area2D" parent="." unique_id=1945109438 node_paths=PackedStringArray("HurtboxOwner")]
collision_layer = 2
collision_mask = 2
script = ExtResource("12_cfq85")
HurtboxOwner = NodePath("..")
metadata/_custom_type_script = "uid://dwiu225lyiv66"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" unique_id=999487449]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_hsbdb")

[node name="Hitsound" type="AudioStreamPlayer2D" parent="." unique_id=1384667283]

[node name="DeathTimer" type="Timer" parent="." unique_id=1982088353]

[node name="StaggerShake" type="AnimationPlayer" parent="." unique_id=2105274763]
libraries/ = SubResource("AnimationLibrary_08ppn")
speed_scale = 2.56

[node name="StaggerSprite" type="Sprite2D" parent="." unique_id=143477651]
visible = false
position = Vector2(-4.505, 1)
scale = Vector2(0.11117188, 0.133125)
texture = ExtResource("13_vpstn")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." unique_id=387328053]
path_desired_distance = 3.0
target_desired_distance = 3.0
path_postprocessing = 1
debug_enabled = true

[node name="PathfindingTimer" type="Timer" parent="." unique_id=283889453]
wait_time = 1.5
one_shot = true
autostart = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="." unique_id=1374648565]
show_behind_parent = true
position = Vector2(0, 38)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_tb7ow")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="PathfindingTimer" to="StateMachine/NewFollow" method="_on_pathfinding_timer_timeout"]
[connection signal="timeout" from="PathfindingTimer" to="StateMachine/Attack" method="_on_pathfinding_timer_timeout"]
